# Noise-Analysis-Nonlinear-EP

./: README.md  pyproject.toml  requirements.txt
docs/: config_guide.md  psd_guide.md
notebooks/: Phase_Diagram.ipynb  input.json  vdp_ic.json  vdp_multi_traj.json  vdp_welch.json
runs/run-20251016-144143/: metadata.json  solutions.npz
src/models/: vanderpol.py
src/phase_diagram/: __init__.py  dynamics.py  io.py  main.py  plotting.py
src/phase_diagram/systems/: vanderpol.py
src/systems/: vanderpol.py
