[tool.poetry]
name = "phase-diagram-app"
version = "0.1.0"
description = "A Python package for analyzing and visualizing phase diagrams of dynamical systems."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
matplotlib = "^3.4"
scipy = "^1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"